--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+Makaan_Properties_Buy.csv filter=lfs diff=lfs merge=lfs -text
+cleaned_indian_property.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
